<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_gravity="center_vertical">
        <ImageView
            android:layout_height="fill_parent"
            android:layout_width="fill_parent"
            android:src="@drawable/copialanding"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"/>
        <ImageView
            android:layout_height="fill_parent"
            android:layout_width="fill_parent"
            android:src="@drawable/gradientsmall"
            android:scaleType="centerCrop"/>



    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/kbasketballsplash"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/pic_" />

        <TextView
            android:layout_below="@+id/copia_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:text= "Chochote Popote."
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin">

            <AutoCompleteTextView
                android:id="@+id/loginUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/strusername"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin">

            <EditText
                android:id="@+id/loginPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint = "@string/prompt_password"
                android:imeActionId="@+id/login"
                android:textColorHint="#FFFFFF"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnLogin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:padding="15sp"
            android:textSize="14sp"
            android:layout_marginBottom="5sp"
            android:background="@drawable/app_button"
            android:textColor="#FFFFFF"
            android:typeface="sans"
            android:elevation="4dp"
            android:text="@string/action_sign_in_short"
            android:textStyle="bold" />
        </LinearLayout>



    </FrameLayout>
</ScrollView>
