<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.afrimobify.copiasalesmobile.OrderActivity">

    <include layout="@layout/toolbar"/>

    <TextView
        android:id="@+id/enter_date_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />
    <TextView
        android:id="@+id/enter_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/layout_search_name"
        android:layout_width="fill_parent"
        android:layout_below="@+id/toolbar"
        android:layout_height="wrap_content"
        android:padding="10sp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/wrapper_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

            <com.copia.copiasalesmobile.utilities.CustomAutoCompleteView
                android:layout_gravity="center_horizontal"
                android:id="@+id/input_agent_name"
                android:drawableLeft="@drawable/app_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter Agent Name... "></com.copia.copiasalesmobile.utilities.CustomAutoCompleteView>


    </android.support.design.widget.TextInputLayout>
    <ImageButton
        android:id="@+id/btnSearchName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignRight="@+id/wrapper_name"
        android:background="@drawable/ic_search_black"
        android:clickable="true"
        />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_search_prod"
        android:layout_width="fill_parent"
        android:layout_below="@+id/layout_search_name"
        android:layout_height="wrap_content"
        android:padding="10sp">
    <android.support.design.widget.TextInputLayout
        android:id="@+id/wrapper_prod_search"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

        <com.copia.copiasalesmobile.utilities.CustomAutoCompleteView
            android:layout_gravity="center_horizontal"
            android:id="@+id/input_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter Product Name... "></com.copia.copiasalesmobile.utilities.CustomAutoCompleteView>

    </android.support.design.widget.TextInputLayout>
        <ImageButton
            android:id="@+id/btnClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignRight="@+id/wrapper_prod_search"
            android:background="@drawable/ic_search_black"
            android:clickable="true"
            />

        </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:id="@+id/wrapper_layaway"
        android:layout_below="@+id/layout_search_prod"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:padding="2sp">

        <CheckBox
            android:id="@+id/cb_layaway"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="16dp"
            android:text="Layaway"
            android:textColor="#000000"
            android:textSize="14sp"
            android:typeface="sans" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/headers"
        android:layout_below="@+id/wrapper_layaway"
        android:layout_marginTop="10sp"
        android:orientation="horizontal">

        <TextView
            style="@style/StyleEnterItemsLabel"
            android:layout_width="70sp"
            android:layout_weight="1"
            android:text="@string/strImage" />

        <TextView
            style="@style/StyleEnterItemsLabel"
            android:layout_weight="1"
            android:text="@string/strPrice" />

        <TextView
            style="@style/StyleEnterItemsLabel"
            android:layout_weight="1"
            android:text="@string/strQuantity" />

        <TextView
            style="@style/StyleEnterItemsLabel"
            android:layout_weight="1"
            android:text="@string/strComm" />

        <TextView
            style="@style/StyleEnterItemsLabel"
            android:layout_weight="1"
            android:text="@string/strTotal" />

        <TextView
            style="@style/StyleEnterItemsLabel"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/enter_prod_quantity"
        android:layout_below="@+id/headers"
        android:layout_marginBottom="5sp"
        android:layout_marginTop="5sp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/enter_code"
            style="@style/StyleEnterItems"
            android:layout_weight="1"
            android:hint="Code"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/enter_imageView"
            style="@style/StyleEnterItems"
            android:layout_width="70sp"
            android:layout_height="70sp"
            android:layout_weight="1"
            android:src="@drawable/noimage" />

        <TextView
            android:id="@+id/enter_price"
            style="@style/StyleEnterItems"
            android:layout_weight="1"
            android:hint="Price" />

        <EditText
            android:id="@+id/enter_qnty"
            style="@style/StyleEnterItems"
            android:layout_weight="1"
            android:hint="Qnty"
            android:inputType="number" />

        <TextView
            android:id="@+id/enter_comm"
            style="@style/StyleEnterItems"
            android:layout_weight="1"
            android:hint="Comm" />
        <TextView
            android:id="@+id/enter_copia_ID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />
        <TextView
            android:id="@+id/enter_check_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <TextView
            android:id="@+id/enter_total"
            style="@style/StyleEnterItems"
            android:layout_weight="1"
            android:hint="Total" />

        <Button
            android:id="@+id/btnAddItemToTable"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/app_button"
            android:drawableLeft="@drawable/cart_add"
            android:text="ADD"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:typeface="sans" />

    </LinearLayout>

    <TableLayout
        android:id="@+id/tableLayoutItems"
        android:layout_width="match_parent"
        android:layout_below="@+id/enter_prod_quantity"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:padding="10dp"
        android:shrinkColumns="*"
        android:stretchColumns="*" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_below="@+id/tableLayoutItems"
        android:id="@+id/grand_total_comm"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp"
        android:padding="10sp"
        android:stretchColumns="1">

        <TableRow>

            <TextView
                style="@style/ProductDetailsLabel"
                android:text="Total Commission (KShs.):" />

            <TextView
                android:id="@+id/enter_grand_total_comm"
                style="@style/ProductDetailsTextView"
                android:inputType="none" />

        </TableRow>
    </TableLayout>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/grand_total"
        android:layout_below="@+id/grand_total_comm"
        android:layout_marginBottom="10sp"
        android:padding="10sp"
        android:stretchColumns="1">

        <TableRow>

            <TextView
                style="@style/ProductDetailsLabel"
                android:text="Grand Total (KShs.):" />

            <TextView
                android:id="@+id/enter_grand_total"
                style="@style/ProductDetailsTextView"
                android:inputType="none" />

        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/btnEnterSendOrder"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:background="@drawable/app_button"
        android:layout_alignParentBottom="true"
        android:text="Send Order"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:textStyle="bold"
        android:typeface="sans" />




</RelativeLayout>

    <fragment
        android:id="@+id/fragment_nav_drawer"
        android:layout_width="350dp"
        android:layout_height="match_parent"
        android:layout_gravity = "start"
        app:layout="@layout/fragment_drawer"
        tools:layout="@layout/fragment_drawer"
        android:name="com.copia.copiasalesmobile.DrawerFragment"/>

</android.support.v4.widget.DrawerLayout>